# mf4

./: .gitignore  build.ps1  pom.xml
build_native/jni/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mdflibjni.sln  mdflibjni.vcxproj  mdflibjni.vcxproj.filters
build_native/jni/Release/: mdflibjni.exp  mdflibjni.lib
build_native/jni/mdflibjni.dir/Release/: mdflibjni.dll.recipe
build_native/jni/mdflibjni.dir/Release/mdflibjni.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_native/jni/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_native/jni/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_native/jni/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
native/: CMakeLists.txt
native/src/: mdflibjni.cpp
src/main/java/com/huawei/behavior/simulation/datawatch/service/mdflib/jni/: MdfLibraryNativeJNI.java
src/main/java/com/huawei/simulation/datawatch/service/mdflib/jni/: MdfLibraryNativeJNI.java
src/main/java/com/mdflib/jna/: MdfLibraryNative.java
src/main/java/com/mdflib/jni/: MdfLibraryNative.java
src/main/java/com/mdflib/model/: ChannelData.java  ChannelGroupInfo.java  DataGroupInfo.java  FileInfo.java  HeaderInfo.java
src/main/java/com/mdflib/service/: MdfReader.java  MdfWriter.java
src/test/java/com/mdflib/service/: MdfLibraryNativeJNITest.java  MdfReaderWriterJniTest.java  MdfReaderWriterTest.java  SimpleLoadTest.java
